# GetCommandOutputC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_env_bat.mk  code.c  compile_bat.py  config.mk  example.bat  general.mk  linux.mk  windows.mk
example/: cmd_rsp_example.c  code.c
include/: GetCommandOutputC.h  cmd_rsp.h
src/: GetCommandOutputC.c  cmd_rsp.c
